
== ??? ===
	* Fixed issue 23, identified by ex0a (outgoing crypt mark did not respect process_outgoing default).

== 2010-09-28 ==
	* Fixed issues with no_legacy = 1, most notably encrypt_topic and other contact specific
	  settings being broken.
	* Fixed topic-not-being-decrypted issue with no_legacy=1. Kudos to _pac.

== 2010-08-01 ==
	* Fixed nasty bug that caused FiSH_encrypt_msg to fail with *messages* that contained spaces
	  and FiSH_WriteKey10 with *keys* that contained spaces.
	* Added support for $chr(N) and $+ in mark_encrypted as suggested in bug #13.

== 2010-06-19 ==
	* Final build with multi-network support. Read about it in README. You can now use different keys for
	  channels of the same name on different networks.
	* Added no_legacy setting to blow.ini. Find out about it in README.BLOWINI.
	* Made regular "Set Key" right click menu entry use ANSI mode, like in old FiSH,
	  and added a new entry "Set Key (UTF-8)" in case someone needs it.
	* Added context menu entry that allows to selectively disable CBC key exchange mode for a contact.
	* Fixed "CBC Mode" display when setting a key.
	* Fixed topic decryption on topic changes.
	* Fixed encrypt_notice setting.
	* Fixed default plain prefix "+p ".
	* Updated OpenSSL libraries to 1.0.0a.

== 2010-06-12 ==
	* Updated test build, fixed issue 14 (no_legacy = 1 was mostly broken).

== 2010-06-03 ==
	* Test build with multi-network support. Complete changelog will follow with the official release.

== 2010-05-20 ==
	* Added Mircryption compatible CBC mode!
	  Use "cbc:KEYHERE" as key to activate. Incoming messages encrypted using the "old"
	  ECB mode still display fine.
	* Added first-ever CBC mode DH1080 key exchange!
	  Two FiSH 10 users doing a DH1080 key exchange will now automatically use the new
	  CBC mode. Key exchanges with old users are completely unimpaired!

== 2010-05-19 ==
	* Fixed issue #7 (DCC downloads stalling at 99%)

== 2010-05-18 ==